--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,3 +1,4 @@
 @import './themes/matchTheme';
 @import '~/bootstrap/scss/_variables';
-@import 'normalize.css/normalize'
+@import 'normalize.css/normalize';
+@import '~react-time-picker/dist/TimePicker.css';
